German/Lenguajes y compiladores/Lab5/ParER.y
-- This Happy file was machine-generated by the BNF converter
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
module ParER where
import AbsER
import LexER
import ErrM

}

%name pProg Prog
%name pListAlfabeto ListAlfabeto
%name pListExpReg ListExpReg
%name pAlfabeto Alfabeto
%name pListSymbol ListSymbol
%name pExpReg ExpReg
%name pExp4 Exp4
%name pExp3 Exp3
%name pExp2 Exp2
%name pExp1 Exp1
%name pExp Exp
-- no lexer declaration
%monad { Err } { thenM } { returnM }
%tokentype {Token}
%token
  '(' { PT _ (TS _ 1) }
  ')' { PT _ (TS _ 2) }
  '*' { PT _ (TS _ 3) }
  ',' { PT _ (TS _ 4) }
  ':' { PT _ (TS _ 5) }
  '=' { PT _ (TS _ 6) }
  'eps' { PT _ (TS _ 7) }
  '{}' { PT _ (TS _ 8) }
  '|' { PT _ (TS _ 9) }
  L_AlfaName { PT _ (T_AlfaName $$) }
  L_ExpName { PT _ (T_ExpName $$) }
  L_Symbol { PT _ (T_Symbol $$) }

%%

AlfaName :: { AlfaName}
AlfaName  : L_AlfaName { AlfaName ($1)}

ExpName :: { ExpName}
ExpName  : L_ExpName { ExpName ($1)}

Symbol :: { Symbol}
Symbol  : L_Symbol { Symbol ($1)}

Prog :: { Prog }
Prog : ListAlfabeto ListExpReg { AbsER.Prog (reverse $1) (reverse $2) }
ListAlfabeto :: { [Alfabeto] }
ListAlfabeto : {- empty -} { [] }
             | ListAlfabeto Alfabeto { flip (:) $1 $2 }
ListExpReg :: { [ExpReg] }
ListExpReg : {- empty -} { [] }
           | ListExpReg ExpReg { flip (:) $1 $2 }
Alfabeto :: { Alfabeto }
Alfabeto : AlfaName '=' ListSymbol { AbsER.Alfabeto $1 $3 }
ListSymbol :: { [Symbol] }
ListSymbol : Symbol { (:[]) $1 }
           | Symbol ',' ListSymbol { (:) $1 $3 }
ExpReg :: { ExpReg }
ExpReg : ExpName '=' Exp ':' AlfaName { AbsER.ExpReg $1 $3 $5 }
Exp4 :: { Exp }
Exp4 : '{}' { AbsER.Evacio }
     | 'eps' { AbsER.EPalabraVacia }
     | Symbol { AbsER.Esymbol $1 }
     | '(' Exp ')' { $2 }
Exp3 :: { Exp }
Exp3 : Exp3 Exp4 { AbsER.EConcat $1 $2 } | Exp4 { $1 }
Exp2 :: { Exp }
Exp2 : Exp2 '|' Exp3 { AbsER.EUnion $1 $3 } | Exp3 { $1 }
Exp1 :: { Exp }
Exp1 : Exp2 '*' { AbsER.EIter $1 } | Exp2 { $1 }
Exp :: { Exp }
Exp : Exp1 { $1 }
{

returnM :: a -> Err a
returnM = return

thenM :: Err a -> (a -> Err b) -> Err b
thenM = (>>=)

happyError :: [Token] -> Err a
happyError ts =
  Bad $ "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ id(prToken t) ++ "'"

myLexer = tokens
}
