German/Lenguajes y compiladores/Lab5/ParER.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from ParER.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProg -> Prog                               (0)
	%start_pListAlfabeto -> ListAlfabeto               (1)
	%start_pListExpReg -> ListExpReg                   (2)
	%start_pAlfabeto -> Alfabeto                       (3)
	%start_pListSymbol -> ListSymbol                   (4)
	%start_pExpReg -> ExpReg                           (5)
	%start_pExp4 -> Exp4                               (6)
	%start_pExp3 -> Exp3                               (7)
	%start_pExp2 -> Exp2                               (8)
	%start_pExp1 -> Exp1                               (9)
	%start_pExp -> Exp                                 (10)
	AlfaName -> L_AlfaName                             (11)
	ExpName -> L_ExpName                               (12)
	Symbol -> L_Symbol                                 (13)
	Prog -> ListAlfabeto ListExpReg                    (14)
	ListAlfabeto ->                                    (15)
	ListAlfabeto -> ListAlfabeto Alfabeto              (16)
	ListExpReg ->                                      (17)
	ListExpReg -> ListExpReg ExpReg                    (18)
	Alfabeto -> AlfaName '=' ListSymbol                (19)
	ListSymbol -> Symbol                               (20)
	ListSymbol -> Symbol ',' ListSymbol                (21)
	ExpReg -> ExpName '=' Exp ':' AlfaName             (22)
	Exp4 -> '{}'                                       (23)
	Exp4 -> 'eps'                                      (24)
	Exp4 -> Symbol                                     (25)
	Exp4 -> '(' Exp ')'                                (26)
	Exp3 -> Exp3 Exp4                                  (27)
	Exp3 -> Exp4                                       (28)
	Exp2 -> Exp2 '|' Exp3                              (29)
	Exp2 -> Exp3                                       (30)
	Exp1 -> Exp2 '*'                                   (31)
	Exp1 -> Exp2                                       (32)
	Exp -> Exp1                                        (33)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	'*'            { PT _ (TS _ 3) }
	','            { PT _ (TS _ 4) }
	':'            { PT _ (TS _ 5) }
	'='            { PT _ (TS _ 6) }
	'eps'          { PT _ (TS _ 7) }
	'{}'           { PT _ (TS _ 8) }
	'|'            { PT _ (TS _ 9) }
	L_AlfaName     { PT _ (T_AlfaName $$) }
	L_ExpName      { PT _ (T_ExpName $$) }
	L_Symbol       { PT _ (T_Symbol $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProg    rule  0
	%start_pListAlfabeto rule  1
	%start_pListExpReg rule  2
	%start_pAlfabeto rule  3
	%start_pListSymbol rule  4
	%start_pExpReg  rule  5
	%start_pExp4    rule  6
	%start_pExp3    rule  7
	%start_pExp2    rule  8
	%start_pExp1    rule  9
	%start_pExp     rule  10
	AlfaName        rule  11
	ExpName         rule  12
	Symbol          rule  13
	Prog            rule  14
	ListAlfabeto    rules 15, 16
	ListExpReg      rules 17, 18
	Alfabeto        rule  19
	ListSymbol      rules 20, 21
	ExpReg          rule  22
	Exp4            rules 23, 24, 25, 26
	Exp3            rules 27, 28
	Exp2            rules 29, 30
	Exp1            rules 31, 32
	Exp             rule  33

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	L_AlfaName     reduce using rule 15
	L_ExpName      reduce using rule 15
	%eof           reduce using rule 15

	Prog           goto state 36
	ListAlfabeto   goto state 37

State 1


	L_AlfaName     reduce using rule 15
	%eof           reduce using rule 15

	ListAlfabeto   goto state 35

State 2


	L_ExpName      reduce using rule 17
	%eof           reduce using rule 17

	ListExpReg     goto state 34

State 3


	L_AlfaName     shift, and enter state 12

	AlfaName       goto state 32
	Alfabeto       goto state 33

State 4


	L_Symbol       shift, and enter state 22

	Symbol         goto state 30
	ListSymbol     goto state 31

State 5


	L_ExpName      shift, and enter state 29

	ExpName        goto state 27
	ExpReg         goto state 28

State 6


	'('            shift, and enter state 19
	'eps'          shift, and enter state 20
	'{}'           shift, and enter state 21
	L_Symbol       shift, and enter state 22

	Symbol         goto state 13
	Exp4           goto state 26

State 7


	'('            shift, and enter state 19
	'eps'          shift, and enter state 20
	'{}'           shift, and enter state 21
	L_Symbol       shift, and enter state 22

	Symbol         goto state 13
	Exp4           goto state 14
	Exp3           goto state 25

State 8


	'('            shift, and enter state 19
	'eps'          shift, and enter state 20
	'{}'           shift, and enter state 21
	L_Symbol       shift, and enter state 22

	Symbol         goto state 13
	Exp4           goto state 14
	Exp3           goto state 15
	Exp2           goto state 24

State 9


	'('            shift, and enter state 19
	'eps'          shift, and enter state 20
	'{}'           shift, and enter state 21
	L_Symbol       shift, and enter state 22

	Symbol         goto state 13
	Exp4           goto state 14
	Exp3           goto state 15
	Exp2           goto state 16
	Exp1           goto state 23

State 10


	'('            shift, and enter state 19
	'eps'          shift, and enter state 20
	'{}'           shift, and enter state 21
	L_Symbol       shift, and enter state 22

	Symbol         goto state 13
	Exp4           goto state 14
	Exp3           goto state 15
	Exp2           goto state 16
	Exp1           goto state 17
	Exp            goto state 18

State 11


	L_AlfaName     shift, and enter state 12


State 12

	AlfaName -> L_AlfaName .                            (rule 11)

	'='            reduce using rule 11
	L_ExpName      reduce using rule 11
	%eof           reduce using rule 11


State 13

	Exp4 -> Symbol .                                    (rule 25)

	'('            reduce using rule 25
	')'            reduce using rule 25
	'*'            reduce using rule 25
	':'            reduce using rule 25
	'eps'          reduce using rule 25
	'{}'           reduce using rule 25
	'|'            reduce using rule 25
	L_Symbol       reduce using rule 25
	%eof           reduce using rule 25


State 14

	Exp3 -> Exp4 .                                      (rule 28)

	'('            reduce using rule 28
	')'            reduce using rule 28
	'*'            reduce using rule 28
	':'            reduce using rule 28
	'eps'          reduce using rule 28
	'{}'           reduce using rule 28
	'|'            reduce using rule 28
	L_Symbol       reduce using rule 28
	%eof           reduce using rule 28


State 15

	Exp3 -> Exp3 . Exp4                                 (rule 27)
	Exp2 -> Exp3 .                                      (rule 30)

	'('            shift, and enter state 19
	')'            reduce using rule 30
	'*'            reduce using rule 30
	':'            reduce using rule 30
	'eps'          shift, and enter state 20
	'{}'           shift, and enter state 21
	'|'            reduce using rule 30
	L_Symbol       shift, and enter state 22
	%eof           reduce using rule 30

	Symbol         goto state 13
	Exp4           goto state 44

State 16

	Exp2 -> Exp2 . '|' Exp3                             (rule 29)
	Exp1 -> Exp2 . '*'                                  (rule 31)
	Exp1 -> Exp2 .                                      (rule 32)

	')'            reduce using rule 32
	'*'            shift, and enter state 47
	':'            reduce using rule 32
	'|'            shift, and enter state 45
	%eof           reduce using rule 32


State 17

	Exp -> Exp1 .                                       (rule 33)

	')'            reduce using rule 33
	':'            reduce using rule 33
	%eof           reduce using rule 33


State 18

	%start_pExp -> Exp .                                (rule 10)

	%eof           accept


State 19

	Exp4 -> '(' . Exp ')'                               (rule 26)

	'('            shift, and enter state 19
	'eps'          shift, and enter state 20
	'{}'           shift, and enter state 21
	L_Symbol       shift, and enter state 22

	Symbol         goto state 13
	Exp4           goto state 14
	Exp3           goto state 15
	Exp2           goto state 16
	Exp1           goto state 17
	Exp            goto state 46

State 20

	Exp4 -> 'eps' .                                     (rule 24)

	'('            reduce using rule 24
	')'            reduce using rule 24
	'*'            reduce using rule 24
	':'            reduce using rule 24
	'eps'          reduce using rule 24
	'{}'           reduce using rule 24
	'|'            reduce using rule 24
	L_Symbol       reduce using rule 24
	%eof           reduce using rule 24


State 21

	Exp4 -> '{}' .                                      (rule 23)

	'('            reduce using rule 23
	')'            reduce using rule 23
	'*'            reduce using rule 23
	':'            reduce using rule 23
	'eps'          reduce using rule 23
	'{}'           reduce using rule 23
	'|'            reduce using rule 23
	L_Symbol       reduce using rule 23
	%eof           reduce using rule 23


State 22

	Symbol -> L_Symbol .                                (rule 13)

	'('            reduce using rule 13
	')'            reduce using rule 13
	'*'            reduce using rule 13
	','            reduce using rule 13
	':'            reduce using rule 13
	'eps'          reduce using rule 13
	'{}'           reduce using rule 13
	'|'            reduce using rule 13
	L_AlfaName     reduce using rule 13
	L_ExpName      reduce using rule 13
	L_Symbol       reduce using rule 13
	%eof           reduce using rule 13


State 23

	%start_pExp1 -> Exp1 .                              (rule 9)

	%eof           accept


State 24

	%start_pExp2 -> Exp2 .                              (rule 8)
	Exp2 -> Exp2 . '|' Exp3                             (rule 29)

	'|'            shift, and enter state 45
	%eof           accept


State 25

	%start_pExp3 -> Exp3 .                              (rule 7)
	Exp3 -> Exp3 . Exp4                                 (rule 27)

	'('            shift, and enter state 19
	'eps'          shift, and enter state 20
	'{}'           shift, and enter state 21
	L_Symbol       shift, and enter state 22
	%eof           accept

	Symbol         goto state 13
	Exp4           goto state 44

State 26

	%start_pExp4 -> Exp4 .                              (rule 6)

	%eof           accept


State 27

	ExpReg -> ExpName . '=' Exp ':' AlfaName            (rule 22)

	'='            shift, and enter state 43


State 28

	%start_pExpReg -> ExpReg .                          (rule 5)

	%eof           accept


State 29

	ExpName -> L_ExpName .                              (rule 12)

	'='            reduce using rule 12


State 30

	ListSymbol -> Symbol .                              (rule 20)
	ListSymbol -> Symbol . ',' ListSymbol               (rule 21)

	','            shift, and enter state 42
	L_AlfaName     reduce using rule 20
	L_ExpName      reduce using rule 20
	%eof           reduce using rule 20


State 31

	%start_pListSymbol -> ListSymbol .                  (rule 4)

	%eof           accept


State 32

	Alfabeto -> AlfaName . '=' ListSymbol               (rule 19)

	'='            shift, and enter state 41


State 33

	%start_pAlfabeto -> Alfabeto .                      (rule 3)

	%eof           accept


State 34

	%start_pListExpReg -> ListExpReg .                  (rule 2)
	ListExpReg -> ListExpReg . ExpReg                   (rule 18)

	L_ExpName      shift, and enter state 29
	%eof           accept

	ExpName        goto state 27
	ExpReg         goto state 40

State 35

	%start_pListAlfabeto -> ListAlfabeto .              (rule 1)
	ListAlfabeto -> ListAlfabeto . Alfabeto             (rule 16)

	L_AlfaName     shift, and enter state 12
	%eof           accept

	AlfaName       goto state 32
	Alfabeto       goto state 39

State 36

	%start_pProg -> Prog .                              (rule 0)

	%eof           accept


State 37

	Prog -> ListAlfabeto . ListExpReg                   (rule 14)
	ListAlfabeto -> ListAlfabeto . Alfabeto             (rule 16)

	L_AlfaName     shift, and enter state 12
	L_ExpName      reduce using rule 17
	%eof           reduce using rule 17

	AlfaName       goto state 32
	ListExpReg     goto state 38
	Alfabeto       goto state 39

State 38

	Prog -> ListAlfabeto ListExpReg .                   (rule 14)
	ListExpReg -> ListExpReg . ExpReg                   (rule 18)

	L_ExpName      shift, and enter state 29
	%eof           reduce using rule 14

	ExpName        goto state 27
	ExpReg         goto state 40

State 39

	ListAlfabeto -> ListAlfabeto Alfabeto .             (rule 16)

	L_AlfaName     reduce using rule 16
	L_ExpName      reduce using rule 16
	%eof           reduce using rule 16


State 40

	ListExpReg -> ListExpReg ExpReg .                   (rule 18)

	L_ExpName      reduce using rule 18
	%eof           reduce using rule 18


State 41

	Alfabeto -> AlfaName '=' . ListSymbol               (rule 19)

	L_Symbol       shift, and enter state 22

	Symbol         goto state 30
	ListSymbol     goto state 52

State 42

	ListSymbol -> Symbol ',' . ListSymbol               (rule 21)

	L_Symbol       shift, and enter state 22

	Symbol         goto state 30
	ListSymbol     goto state 51

State 43

	ExpReg -> ExpName '=' . Exp ':' AlfaName            (rule 22)

	'('            shift, and enter state 19
	'eps'          shift, and enter state 20
	'{}'           shift, and enter state 21
	L_Symbol       shift, and enter state 22

	Symbol         goto state 13
	Exp4           goto state 14
	Exp3           goto state 15
	Exp2           goto state 16
	Exp1           goto state 17
	Exp            goto state 50

State 44

	Exp3 -> Exp3 Exp4 .                                 (rule 27)

	'('            reduce using rule 27
	')'            reduce using rule 27
	'*'            reduce using rule 27
	':'            reduce using rule 27
	'eps'          reduce using rule 27
	'{}'           reduce using rule 27
	'|'            reduce using rule 27
	L_Symbol       reduce using rule 27
	%eof           reduce using rule 27


State 45

	Exp2 -> Exp2 '|' . Exp3                             (rule 29)

	'('            shift, and enter state 19
	'eps'          shift, and enter state 20
	'{}'           shift, and enter state 21
	L_Symbol       shift, and enter state 22

	Symbol         goto state 13
	Exp4           goto state 14
	Exp3           goto state 49

State 46

	Exp4 -> '(' Exp . ')'                               (rule 26)

	')'            shift, and enter state 48


State 47

	Exp1 -> Exp2 '*' .                                  (rule 31)

	')'            reduce using rule 31
	':'            reduce using rule 31
	%eof           reduce using rule 31


State 48

	Exp4 -> '(' Exp ')' .                               (rule 26)

	'('            reduce using rule 26
	')'            reduce using rule 26
	'*'            reduce using rule 26
	':'            reduce using rule 26
	'eps'          reduce using rule 26
	'{}'           reduce using rule 26
	'|'            reduce using rule 26
	L_Symbol       reduce using rule 26
	%eof           reduce using rule 26


State 49

	Exp3 -> Exp3 . Exp4                                 (rule 27)
	Exp2 -> Exp2 '|' Exp3 .                             (rule 29)

	'('            shift, and enter state 19
	')'            reduce using rule 29
	'*'            reduce using rule 29
	':'            reduce using rule 29
	'eps'          shift, and enter state 20
	'{}'           shift, and enter state 21
	'|'            reduce using rule 29
	L_Symbol       shift, and enter state 22
	%eof           reduce using rule 29

	Symbol         goto state 13
	Exp4           goto state 44

State 50

	ExpReg -> ExpName '=' Exp . ':' AlfaName            (rule 22)

	':'            shift, and enter state 53


State 51

	ListSymbol -> Symbol ',' ListSymbol .               (rule 21)

	L_AlfaName     reduce using rule 21
	L_ExpName      reduce using rule 21
	%eof           reduce using rule 21


State 52

	Alfabeto -> AlfaName '=' ListSymbol .               (rule 19)

	L_AlfaName     reduce using rule 19
	L_ExpName      reduce using rule 19
	%eof           reduce using rule 19


State 53

	ExpReg -> ExpName '=' Exp ':' . AlfaName            (rule 22)

	L_AlfaName     shift, and enter state 12

	AlfaName       goto state 54

State 54

	ExpReg -> ExpName '=' Exp ':' AlfaName .            (rule 22)

	L_ExpName      reduce using rule 22
	%eof           reduce using rule 22


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 34
Number of terminals: 12
Number of non-terminals: 25
Number of states: 55
